// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPartyAuthComponent buttons match snapshot: apple 1`] = `
<button
  aria-label="Continue with Apple"
  class="w-[60px] h-[60px] p-4 flex items-center justify-center rounded-full border focus-visible-default outline-offset-2
      bg-black border-transparent
      "
  type="button"
>
  <svg
    class="w-full h-auto"
  >
    apple-logo-viewbox-white.svg
  </svg>
</button>
`;

exports[`ThirdPartyAuthComponent buttons match snapshot: google 1`] = `
<button
  aria-label="Continue with Google"
  class="w-[60px] h-[60px] p-4 flex items-center justify-center rounded-full border focus-visible-default outline-offset-2
      bg-[#F9F4F4] border-[#747775] border-[1px]
      "
  type="button"
>
  <svg
    class="w-full h-auto"
  >
    google-logo-viewbox.svg
  </svg>
</button>
`;
